--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Vaibhav Yadav",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
@@ -21,4 +22,3 @@
     "supertest": "^6.3.3"
   }
 }
- 
