--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "Assignment Task",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "dev": "node server.js"
+    "start": "app server.js",
+    "dev": "node app.js"
   },
   "author": "Vaibhav Yadav",
   "license": "ISC",
