--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "app server.js",
+    "start": "nodemon app.js",
     "dev": "node app.js"
   },
   "author": "Vaibhav Yadav",
